# native_ui

./: CMakeLists.txt  README.md  make_ios.sh
include/native_ui/: action.h  align.h  data.h  device.h  file.h  font.h  image.h  manager.h  parser.h  preferences.h  touch.h  touch_handle.h  types.h  util.h  view.h  view_controller.h  view_layout_controller.h
java/com/manhtran/nativeui/: ActivityHelper.java  CustomFunction.java  CustomImageView.java  CustomLabel.java  CustomSharedView.java  CustomTextField.java  CustomTextView.java  CustomView.java
jslib/: config.js  view.js
res/: root.xml
src/android/: device_droid.c  font_droid.c  image_droid.c  image_view_droid.c  jni_env_droid.c  label_droid.c  textfield_droid.c  view_droid.c
src/android/custom/: imageview.h  imageview_custom_android.c  label.h  label_custom_android.c  textfield.h  textfield_custom_android.c  textview.h  textview_custom_android.c  util.h  util_custom_android.c  view.h  view_custom_android.c
src/ios/: font.m  image.m  image_view.m  label.m  textfield.m  util.m  view.m
src/ios/custom/: imageview.h  imageview.m  label.h  label.m  textfield.h  textfield.m  textview.h  textview.m  view.h  view.m
src/shared/: action.c  data.c  file.c  font.c  image.c  listview.c  native_ui_manager.c  preferences.c  touch.c  touch_handle.c  view.c  view_controller.c
src/shared/layout/: absolute.c  align.c  controller.h  horizontal.c  relative.c  size_horizontal.c  size_vertical.c  vertical.c  view_layout_controller.c
src/shared/parser/: parser.c
src/shared/parser/common_delegate/: delegate.h  delegate_align.c  delegate_alpha.c  delegate_anchor.c  delegate_border.c  delegate_clip.c  delegate_color.c  delegate_hash.c  delegate_height.c  delegate_intercept.c  delegate_margin.c  delegate_padding.c  delegate_rotation.c  delegate_round.c  delegate_scale.c  delegate_touch_common.c  delegate_type.c  delegate_visible.c  delegate_weights.c  delegate_width.c  delegate_x.c  (+1 more)
src/web/: device_web.c  font_web.c  image_web.c  view_web.c
(+14 files in other folders)
